--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,14 @@
 /* TODO Add site wide styles */
+@font-face {
+    font-family: Ember;
+    src: url("./fonts/AmazonEmber_Rg.ttf") format("truetype");
+}
+
+* {
+    font-family: "Ember";
+    text-decoration: none;
+}
+
+body {
+    margin: 0;
+}
