--- a/react-app/src/components/Product/ProductCard/style/ProductCard.css
+++ b/react-app/src/components/Product/ProductCard/style/ProductCard.css
@@ -21,6 +21,12 @@
     height: 200px;
 }
 
+.product-card-image2 {
+    padding: 20px 20px 0px 20px;
+    max-width: 500px;
+    height: 180px;
+}
+
 .product-card-info {
     display: flex;
     flex-direction: column;
@@ -30,14 +36,28 @@
 
 .product-card-name {
     margin: 0px 0px 15px 0px;
+    color: black;
 }
 
 .product-card-price {
     margin: 0px;
+    color: black;
 }
 
 .product-card-rating {
     display: flex;
     flex-direction: row;
     margin: 0px 0px 10px 0px;
+}
+
+.star-gray {
+    color: #c3c3c3;
+}
+
+.star-yellow {
+    color: #253d5d;
+}
+
+.fas fa-star star-gray {
+    border: 1px solid black;
 }
