--- a/react-app/src/components/ProductPage/style/ProductPage.css
+++ b/react-app/src/components/ProductPage/style/ProductPage.css
@@ -1,7 +1,184 @@
-.star-gray {
-    color: #c3c3c3;
+.productpage-categories {
+    display: flex;
+    align-items: center;
+    color: #565959;
+    font-size: 12px;
+    margin: 10px 5% 0% 5%;
 }
 
-.star-yellow {
-    color: rgb(245, 245, 95);
+.productpage-home:hover {
+    color: #565959;
+    text-decoration: underline;
+}
+
+.productpage-productcontainer {
+    display: flex;
+    justify-content: center;
+    margin: 0% 5%;
+}
+
+.productpage-image {
+    width: auto !important;
+    height: 100% !important;
+    max-height: 55vh;
+}
+
+.productpage-productinfocontainer {
+    margin-left: 20px;
+}
+
+.productpage-productname {
+    font-size: 24px;
+    margin: 0px;
+}
+
+.productpage-ratingcontainer {
+    display: flex;
+    align-items: center;
+}
+
+.productpage-rating {
+    display: flex;
+}
+
+.productpage-ratingnum {
+    margin-left: 10px;
+    font-size: 14px;
+    color: #007185;
+}
+
+.productpage-pricecontainer {
+    display: flex;
+    align-items: center;
+}
+
+.productpage-pricetag {
+    font-size: 13px;
+}
+
+.productpage-price {
+    font-size: 28px;
+    margin: 0px;
+}
+
+.productpage-returncontainer {
+    display: flex;
+    align-items: center;
+}
+
+.productpage-returnand {
+    font-size: 14px;
+}
+
+.productpage-returnfree {
+    color: #007185;
+    font-size: 14px;
+    margin-left: 3px;
+}
+
+.productpage-productabout {
+    font-size: 14px;
+}
+
+.productpage-productdesc {
+    font-size: 14px;
+}
+
+.productpage-productrightcont {
+    border: 1px solid rgb(213, 217, 217);
+    border-radius: 8px;
+    padding: 14px 18px;
+    left: 10%;
+    height: 300px;
+}
+
+.productpage-rpricecontainer {
+    display: flex;
+    align-items: center;
+}
+
+.productpage-returnand2 {
+    font-size: 14px;
+    margin-bottom: 0px;
+}
+
+.productpage-returnfree2 {
+    color: #007185;
+    font-size: 14px;
+    margin-left: 3px;
+    margin-bottom: 0px;
+}
+
+.productpage-deliveryfree {
+    font-size: 14px;
+}
+
+.productpage-wholereviewcontainer {
+    display: flex;
+}
+
+.productpage-divider {
+    border: 1px solid rgb(231, 231, 231);
+    margin: 10px 5% 0px 5%;
+}
+
+.productpage-reviewstuff {
+    margin-left: 5%;
+    width: 300px;
+}
+
+.productpage-reviewstuffdivider {
+    margin-top: 20px;
+    margin-left: 5%;
+    width: 300px;
+}
+
+.productpage-reviewcontainer {
+    margin: 0px 5%;
+}
+
+.product-page-createreviewcontainer {
+    margin-left: 5%;
+    width: 300px;
+}
+
+.productpage-createreviewtext {
+    font-size: 14px;
+}
+
+.productpage-createreviewbutton {
+    background: rgb(255, 255, 255);
+    border-color: rgb(213, 217, 217);
+    border-radius: 7px;
+    border-style: solid;
+    border-width: 1px;
+    box-shadow: rgb(213 217 217 / 50%) 0px 2px 5px 0px;
+    color: black;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 13px;
+    height: 29px;
+    padding: 10px 0px 0px 0px;
+    text-align: center;
+    text-decoration: none !important;
+    vertical-align: middle;
+    width: 100%;
+}
+
+.productpage-createreviewbutton:hover {
+    background-color: rgb(247, 250, 250);
+    border-color: rgb(213, 217, 217);
+}
+
+.productpage-reviewcontainer {
+    margin-top: 20px;
+}
+
+.productpage-allreviewtext {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.productpage-reviewuser {
+    margin: 0px;
 }
