--- a/react-app/src/components/ReviewDetails/style/ReviewDetail.css
+++ b/react-app/src/components/ReviewDetails/style/ReviewDetail.css
@@ -59,8 +59,7 @@
 .reviewdetail-barinnerprogress {
     display: block;
     height: 100%;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+    border-radius: 4px;
     background-color: rgb(255, 164, 28);
     box-shadow: rgb(245 150 29) -2px 0px 0px -1px inset, rgb(222 121 33) 0px 0px 0px 1px inset;
     position: relative;
