--- a/react-app/src/components/ProductPage/style/ProductPage.css
+++ b/react-app/src/components/ProductPage/style/ProductPage.css
@@ -29,7 +29,7 @@
 
 .productpage-productname {
     font-size: 24px;
-    margin: 0px;
+    margin: 0px 10px 0px 0px;
 }
 
 .productpage-ratingcontainer {
