--- a/react-app/src/components/Review/style/Review.css
+++ b/react-app/src/components/Review/style/Review.css
@@ -15,17 +15,23 @@
     cursor: pointer;
     font-size: 13px;
     height: 29px;
-    padding: 10px 20px 0px 20px;
+    padding: 10px 20px 10px 20px;
+}
+
+.review-seperator {
+    display: inline-block;
+    margin: 0px 10px 0px 20px;
+    width: 1px;
+    background-color: #ddd;
+    line-height: 0;
+    height: 20px;
+    vertical-align: middle;
 }
 
 .review-deletebutton {
-    background: rgb(255, 68, 68);
-    border-color: rgb(0, 0, 0);
-    border-radius: 7px;
-    border-style: solid;
-    border-width: 1px;
-    box-shadow: rgb(213 217 217 / 50%) 0px 2px 5px 0px;
-    color: rgb(255, 255, 255);
+    border: none !important;
+    background: none !important;
+    color: #007185;
     cursor: pointer;
     display: inline-block;
     font-size: 13px;
@@ -33,6 +39,4 @@
     text-align: center;
     text-decoration: none !important;
     vertical-align: middle;
-    padding: 10px 20px;
-    margin-left: 10px;
 }
