--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -9,6 +9,13 @@
     text-decoration: none;
 }
 
+body,
+html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
 body {
     margin: 0;
 }
