--- a/react-app/src/components/ProductPage/style/ProductPage.css
+++ b/react-app/src/components/ProductPage/style/ProductPage.css
@@ -119,7 +119,7 @@
 }
 
 .productpage-divider {
-    border: 1px solid rgb(231, 231, 231);
+    border-bottom: 1px solid rgb(231, 231, 231);
     margin: 10px 5% 0px 5%;
 }
 
