--- a/react-app/src/components/ProductPage/style/ProductPage.css
+++ b/react-app/src/components/ProductPage/style/ProductPage.css
@@ -90,7 +90,7 @@
     border-radius: 8px;
     padding: 14px 18px;
     left: 10%;
-    height: 300px;
+    height: 175px;
 }
 
 .productpage-rpricecontainer {
@@ -119,7 +119,7 @@
 }
 
 .productpage-divider {
-    border: 1px solid rgb(231, 231, 231);
+    border-bottom: 1px solid rgb(231, 231, 231);
     margin: 10px 5% 0px 5%;
 }
 
