--- a/react-app/src/components/Review/CreateReviewForm/style/CreateReviewForm.css
+++ b/react-app/src/components/Review/CreateReviewForm/style/CreateReviewForm.css
@@ -70,6 +70,12 @@
     box-sizing: border-box;
 }
 
+.userrev-titleinput:focus {
+    outline: 0;
+    border-color: #e77600;
+    box-shadow: 0 0 3px 2px rgb(228 121 17 / 50%);
+}
+
 .userrev-bodycont {
     border-bottom: 1px solid #ddd;
     padding-bottom: 20px;
@@ -90,6 +96,12 @@
     padding: 5px 7px;
     resize: vertical;
     box-sizing: border-box;
+}
+
+.userrev-descinput:focus {
+    outline: 0;
+    border-color: #e77600;
+    box-shadow: 0 0 3px 2px rgb(228 121 17 / 50%);
 }
 
 .userrev-submit {
