--- a/react-app/src/components/ProductPage/style/ProductPage.css
+++ b/react-app/src/components/ProductPage/style/ProductPage.css
@@ -90,7 +90,7 @@
     border-radius: 8px;
     padding: 14px 18px;
     left: 10%;
-    height: 175px;
+    height: 20%;
 }
 
 .productpage-rpricecontainer {
