--- a/react-app/src/components/auth/style/LogOut.css
+++ b/react-app/src/components/auth/style/LogOut.css
@@ -1,3 +1,7 @@
 .logout-button {
     cursor: pointer;
+    padding: 5px;
+    background-color: #FCD200;
+    border-radius: 8px;
+    border: none;
 }
