--- a/react-app/src/components/NavBar/style/NavBar.css
+++ b/react-app/src/components/NavBar/style/NavBar.css
@@ -35,7 +35,7 @@
 
 .navbar-hello {
     font-size: 14px;
-    /* margin-bottom: 0px; */
+    margin-bottom: 0px;
     color: white;
 }
 
@@ -87,6 +87,31 @@
     color: white;
     font-weight: bold;
     font-size: 14px;
+}
+
+.category {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 39px;
+    background-color: #232f3e;
+}
+
+.category-link {
+    color: white;
+    font-size: 14px;
+    border: 1px solid;
+    border-radius: 2px;
+    box-shadow: none;
+    border-color: #232f3e;
+    padding: 5px;
+}
+
+.category-link:hover {
+    text-decoration: none;
+    border: 1px solid;
+    border-radius: 2px;
+    box-shadow: none;
 }
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
